# florgon-cc-paste-bot

./: .gitignore  README.md  config.py  docker-compose.yml  exceptions.py  main.py  requierements.txt
models/: error.py  paste.py
services/: api.py  paste.py
src/: Dockerfile  config.py  docker-compose.yml  example_config.env  exceptions.py  main.py  pyproject.toml
src/models/: __init__.py  error.py  paste.py  stats.py
src/routers/: __init__.py  paste.py
src/services/: api.py  paste.py
